--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "extends": "./node_modules/standard/eslintrc.json"
   },
   "dependencies": {
+    "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "helmet": "^6.1.5",
+    "mongoose": "^7.1.0",
     "passport": "^0.6.0",
     "passport-discord": "^0.1.4"
   }
